@@ -28,6 +28,8 @@ recycling=Recycling __1__
 recycler=Recycler
 not-enough-modules=Not enough modules to upgrade machine
 missing-quality-module-upgrade=Quality upgrade for module __1__ not supported
+too-many-existing-modules=Can't add quality to machine with too many existing modules
+cant-speed-quality=Can't add quality modules to machines with speed bonuses
 qual-description=[font=default-semibold][color=255,230,192]Quality probabilities:[/color][/font]\n
 qual-line=[img=jq_quality_icon___1__] → __2__\n
 qual-percent=[img=jq_quality_icon___2__]__1__%
@@ -39,5 +41,5 @@ jq-quality=Quality and quality modules
 jq-recycling=Recycling
 
 [tips-and-tricks-item-description]
-jq-quality=Every item has quality, which gives it various bonuses. For example: [item=medium-electric-pole-quality-2], [item=assembling-machine-2-quality-3]. Assemblers can utilize recipes of higher quality to require quality ingredients, and return quality results.\n\nIn order to get quality, a machine must be infused with quality modules which increases the probability of getting higher quality items.\n\nQuality modules [item=quality-module-1] are not modules as in the vanilla game as they require engine support.\nIn order to add quality modules to buildings, take the module in hand, and drag over the relevant machines (assemblers, furnaces, chemical plants, mining drills). Machines can only accept their maximum number of modules at once.\nIn order to remove modules, take a quality module in hand (any kind) and right-click drag over the buildings.\n\nThis system does not work with construction bots. To use bots, utilize the various "programming" recipes to create a machine with embedded quality modules. They are available in crafting machines.
+jq-quality=Every item has quality, which gives it various bonuses. For example: [item=medium-electric-pole-quality-2], [item=assembling-machine-2-quality-3]. Assemblers can utilize recipes of higher quality to require quality ingredients, and return quality results.\n\nIn order to get quality bonuses, a machine must be infused with quality modules which increases the probability of getting higher quality items. See the placed machine description for the probabilities.\n\nQuality modules [item=quality-module-1] are not modules as in the vanilla game as they require engine support.\nIn order to add quality modules to buildings, take the module in hand, and drag over the relevant machines (assemblers, furnaces, chemical plants, mining drills). Machines can only accept their maximum number of modules at once.\nIn order to remove modules, take a quality module in hand (any kind) and right-click drag over the buildings, or mine the building.\n[color=yellow]Advanced:[/color] Shift-left-click drag to add the minimum number of modules supported (currently only allows 2 quality modules in [item=assembling-machine-3])\n\nThis system does not work with construction bots. To use bots, utilize the various "programming" recipes to create a machine with embedded quality modules. They are available in crafting machines.\n\nMachines with quality modules do not accept [item=speed-module] effects.
 jq-recycling=The recycler [item=jq-recycler] can take any item and return 25% of its ingredients as results. Only items that can be crafted in assembling machines return their ingredients. Other items return themselves.
