@@ -2,6 +2,7 @@
 Version: 0.1.9
 Date: ???
   Changes:
+    - Allow for 2x modules in AM3 to allow 2x prod/eff modules
     - More visible quality overlays
   Bug fixes:
     - Fixed normal productivity modules not working for higher quality recipes
